Bug 81148 - Transparency gradients for graphics are displayed completely wrong on Linux
Summary: Transparency gradients for graphics are displayed completely wrong on Linux
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.3.0.2 rc
Hardware: Other Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.0
Keywords:
: 76923 (view as bug list)
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-07-10 06:49 UTC by Tor Lillqvist
Modified: 2014-07-15 16:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Examples of the bug (10.52 KB, image/png)
2014-07-10 08:37 UTC, Marina Latini (SUSE)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tor Lillqvist 2014-07-10 06:49:57 UTC
In current master: Open a fresh Draw document, add a rectangle, right-click and choose Area..., choose the Transparency tab, select Gradient, click OK. The result are a couple of horizontal bands inside the rectangle inside of a gradient.

Works as it should on OS X and Windows.
Comment 1 Marina Latini (SUSE) 2014-07-10 08:37:01 UTC
Created attachment 102522 [details]
Examples of the bug

Bug tested with LibreOffice 4.2.5.1 and 4.3.0.2
Comment 2 Marina Latini (SUSE) 2014-07-10 08:40:31 UTC
Confirmed on LibreOffice
* Version: 4.3.0.2
* Build ID: 14ed55896fdfcb93ff437b85c4f3e1923d2b1409
* OS: Ubuntu 14.04 x86_64

Status -> New
Version -> downgraded to 4.3.0.2
Blocks -> from MAB4.4 to mab4.3
Comment 3 Kevin Suo 2014-07-10 08:43:53 UTC
(In reply to comment #1)

> Bug tested with LibreOffice 4.2.5.1 and 4.3.0.2

Do you have an idea what is the first version this bug appears?
Or does it never worked before?
Comment 4 Jean-Baptiste Faure 2014-07-10 20:02:22 UTC
(In reply to comment #3)
> (In reply to comment #1)
> 
> > Bug tested with LibreOffice 4.2.5.1 and 4.3.0.2
> 
> Do you have an idea what is the first version this bug appears?
> Or does it never worked before?

Works as expected in version 4.2.6.0.0+ Build ID: 0acf899a982e850961350aba531bb87f43c8a422 under Ubuntu 14.04 x86-64

Best regards. JBF
Comment 5 Commit Notification 2014-07-11 15:12:42 UTC
Matuš Kukan committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4cb52136220b417f09eb2156e11436ee0a06729f

fdo#81148: Fix transparency gradients.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Jean-Baptiste Faure 2014-07-13 16:57:22 UTC
Hi Matus,

Do you plan to backport your fix to 4.3 branch? This bug is in MAB 4.3 and is marked as fixed (it is, but in master) which may lead to some confusion.

Best regards. JBF
Comment 7 Commit Notification 2014-07-13 20:06:30 UTC
Matuš Kukan committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7707f1cf74115e659794ffe6214529c24aee0340&h=libreoffice-4-3

fdo#81148: Fix transparency gradients.


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 László Németh 2014-07-15 12:48:48 UTC
*** Bug 76923 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2014-07-15 16:05:58 UTC
Matuš Kukan committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bf1ca8bbbf94fe9ca6251b56388415dfdf26f605&h=libreoffice-4-3-0

fdo#81148: Fix transparency gradients.


It will be available already in LibreOffice 4.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.