fdo#81148: Fix transparency gradients.

regression from a5351434fbea1126961f5dbaa986e7c9e686c24e.
Revert one line from that commit without too much understanding :-/

Change-Id: I126c25e2ad945ef1ec20a5677406434931d0790d